--- a/src/components/words/Words.scss
+++ b/src/components/words/Words.scss
@@ -1,9 +1,8 @@
 .words {
-  padding: 50px;
-  padding-top: 0;
+  padding: 0 50px;
 
   h3 {
-    padding: 0 30px;
+    padding: 0 30px 10px;
     text-align: center;
     color: #001529;
     text-transform: uppercase;
