--- a/src/components/learning/Learning.scss
+++ b/src/components/learning/Learning.scss
@@ -1,7 +1,6 @@
 .learning {
- width: 100%;
  height: auto;
- padding: 1rem 3rem;
+ padding: 1rem;
 }
 
 .color-strong {
@@ -18,9 +17,10 @@
   }
 
   p {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: normal;
     text-align: justify;
+    margin-bottom: 10px;
   }
 }
 
