--- a/src/components/promo-description/Promo-description.scss
+++ b/src/components/promo-description/Promo-description.scss
@@ -12,9 +12,16 @@
     padding: 10px 0;
     font-size: 20px;
     font-weight: bold;
-    color: #366b82;
+    color: #932a2f;
     text-align: center;
     text-transform: uppercase;
+  }
+
+  img {
+    display: block;
+    // width: 400px;
+    margin: 0 auto;
+    border-radius: 30px;
   }
 }
 
@@ -44,6 +51,7 @@
       align-items: center;
       text-align: center;
       font-size: 16px;
+      color: #932a2f;
     }
   }
 }
