--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -13,14 +13,22 @@
 }
 
 .ant-carousel .slick-dots li.slick-active button {
-  background: #df168b;
+  background: #932a2f;
   opacity: 1;
 }
 
 .slide h3{
   font-family: 'Poiret One', cursive;
-  font-size: 30px;
+  font-size: 24px;
   font-weight: bold;
-  color: #df168b;
+  color: #932a2f;
   text-align: center;
+  text-transform: uppercase;
+}
+
+.slide-one,
+.slide-two,
+.slide-three {
+  height: calc(100vh - 245px);
+  overflow-y: scroll;
 }
