--- a/src/components/statistic/Statistic.scss
+++ b/src/components/statistic/Statistic.scss
@@ -12,3 +12,11 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
+
+@media screen and (max-width: 600px) {
+  .chart_container {
+    h3 {
+      text-align: center;
+    }
+  }
+}
